@@ -662,8 +662,8 @@ private:
   Monitor* periodic_monitor_;
 
   // Do we need to set the sequence repair header bit?
-  //   must set the header sequence number prior to calling
-  bool need_sequence_repair(const DataSampleHeader& hdr) const;
+  //   must call prior to incrementing sequence number
+  bool need_sequence_repair() const;
 };
 
 } // namespace DCPS
